[gd_scene load_steps=9 format=3 uid="uid://blto1gygpyqjf"]

[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_aeo4f"]
[ext_resource type="Texture2D" uid="uid://dip1b42kgcui4" path="res://tilesets/cutscenes/title_screen/title_screen_bg.png" id="1_qv1vw"]
[ext_resource type="Theme" uid="uid://m3ywd3orgfuv" path="res://scenes/title_screen/new_game.tres" id="2_0iklp"]
[ext_resource type="PackedScene" uid="uid://bj5svrmek3bws" path="res://scenes/characters/char_1.tscn" id="2_kuomu"]
[ext_resource type="Theme" uid="uid://daeugu5tftu2v" path="res://scenes/title_screen/continue.tres" id="4_7l454"]
[ext_resource type="Theme" uid="uid://60pra6cavevi" path="res://scenes/title_screen/quit.tres" id="5_em41e"]
[ext_resource type="PackedScene" uid="uid://ds2cqfu3jjjop" path="res://scenes/scene_transition.tscn" id="6_wcoiu"]
[ext_resource type="PackedScene" uid="uid://dwcokwrsyk1xa" path="res://scenes/save_menu/save_menu.tscn" id="8_7ai7l"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aeo4f")

[node name="player" parent="." instance=ExtResource("2_kuomu")]

[node name="TitleScreenBg" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("1_qv1vw")

[node name="new_game" type="Button" parent="."]
layout_mode = 0
offset_left = 85.0
offset_top = 310.0
offset_right = 585.0
offset_bottom = 405.0
theme = ExtResource("2_0iklp")

[node name="continue" type="Button" parent="."]
layout_mode = 0
offset_left = 85.0
offset_top = 440.0
offset_right = 585.0
offset_bottom = 535.0
theme = ExtResource("4_7l454")

[node name="quit" type="Button" parent="."]
layout_mode = 0
offset_left = 85.0
offset_top = 570.0
offset_right = 585.0
offset_bottom = 665.0
theme = ExtResource("5_em41e")

[node name="Transition" parent="." instance=ExtResource("6_wcoiu")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SaveMenu" parent="CanvasLayer" instance=ExtResource("8_7ai7l")]

[connection signal="pressed" from="new_game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
